2008-06-16  Ross Burton  <ross@burtonini.com>

	* gfileenumerator.c:
	Remove check for dispose implementation as it annoys Emmanuele.
	
2008-06-16  Ross Burton  <ross@burtonini.com>

	Bug 536252 – GFileEnumerator should allow access to the containing
	GFile
	
	* gfileenumerator.c:
	* gfileenumerator.h:
	* gfile.h:
	Add g_file_enumerator_get_container() and a container writeable
	construct-only property.  Also shuffle around typedefs to make it
	compile.
	
	* glocalfileenumerator.c:
	* glocalfileenumerator.h:
	* glocalfile.c:
	Instead of a string filename take a GFile in the constructor and
	use it to set the container property.
	
	* gio.symbols:
	Update with new API.

2008-06-16  Matthias Clasen  <mclasen@redhat.com>

	* gfile.c: Make includes more uniform

2008-06-12  Yevgen Muntyan  <muntyan@tamu.edu>

	* tests/live-g-file.c (sample_struct):
        Use less fancy unicode filenames, so the test doesn't fail
        on Mac OS X (#531476).

2008-06-12  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.17.2 ===

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.1 ===

2008-06-11  A. Walton  <awalton@gnome.org>

	* tests/g-file.c (test_g_file_new_null):
	Fix broken test case.

2008-06-11  Matthias Clasen <mclasen@redhat.com>

	* pltcheck.sh: We use g_clear_error now.

2008-06-11  Matthias Clasen <mclasen@redhat.com>

	* glocalfile.c (g_local_file_enumerate_children): Revert
	an unintended change.

2008-06-11  Matthias Clasen <mclasen@redhat.com>

	* gfile.c (g_file_replace_contents): Don't unref before the last use.

2008-06-10  Matthias Clasen <mclasen@redhat.com>

	Bug 537546 – 'desktop' shortcut in file chooser looks like a generic
	folder
	
	* glocalfileinfo.c (_g_local_file_info_get): Return user-desktop
	as icon for the desktop directory, also make user-home and
	user-desktop the preferred icons.

2008-06-10  Matthias Clasen <mclasen@redhat.com>

	* gio.symbols:
	* gthemedicon.[hc] (g_themed_icon_prepend_name): New function,