@@ -1,3 +1,9 @@
+2008-06-16  Michael Natterer  <mitch@imendio.com>
+
+	* *.c: chain up unconditionally in finalize() and dispose(). Also
+	don't dereference these function pointers when calling them since
+	that has no meaning at all.
+
 2008-06-16  Ross Burton  <ross@burtonini.com>
 
 	* gfileenumerator.c:
